docker_based_deploy_azure/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: eszop
  namespace: default
spec:
  tls:
    - hosts:
        - "[PROVIDE DOMAIN NAME]"
      secretName: eszop-cert
  rules:
    - host: "[PROVIDE DOMAIN NAME]"
      http:
        paths:
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: eszop-api-gateway
                port:
                  number: 80
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: eszop-frontend
                port:
                  number: 80
